crates/nash-report/src/snapshots/nash_report__canonicalize__branches__bad_head_function.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
nash::names::bad_instance_head

  × This impl head is a function type:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help: Use a named type constructor or a tuple as the outermost type of an impl head.
