crates/nash-report/src/snapshots/nash_report__canonicalize__branches__duplicate_destruct.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "value =\n    let\n        (x, x) = (1, 2)\n    in\n    x"
---
nash::names::duplicate_pattern

  × This pattern contains multiple `x` variables.
   ╭─[Main.nash:3:13]
 2 │     let
 3 │         (x, x) = (1, 2)
   ·          ┬  ┬
   ·          │  ╰── and another first definition
   ·          ╰── first definition
 4 │     in
   ╰────
  help: Rename one of the definitions.
