crates/nash-report/src/snapshots/nash_report__canonicalize__branches__duplicate_function.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
NAME CLASH

  × The `map` function has multiple `x` arguments. One here:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ──┬─┬
   ·   │ ╰── and another one here
   ·   ╰── one here
   ╰────
  help: How can I know which one you want? Rename one of them!
