crates/nash-report/src/snapshots/nash_report__canonicalize__branches__duplicate_lambda.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "value = \\x x -> x"
---
nash::names::duplicate_pattern

  × This anonymous function has multiple `x` arguments.
   ╭─[Main.nash:1:12]
 1 │ value = \x x -> x
   ·          ┬ ┬
   ·          │ ╰── and another first definition
   ·          ╰── first definition
   ╰────
  help: Rename one of the definitions.
