crates/nash-report/src/snapshots/nash_report__canonicalize__branches__duplicate_let.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
nash::names::duplicate_pattern

  × This `let` expression defines `x` more than once!
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ──┬─┬
   ·   │ ╰── first definition
   ·   ╰── and another first definition
   ╰────
  help: Rename one of the definitions.
