crates/nash-report/src/snapshots/nash_report__canonicalize__branches__export_multiple_suggestions.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
nash::names::export_not_found

  × Unknown exported operator (<+>).
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help: Similar names:

            +
            ++
