crates/nash-report/src/snapshots/nash_report__canonicalize__branches__formation_context_1.snap
---
source: crates/nash-report/src/canonicalize.rs
description: type Tree = Node Int List
---
nash::names::kind_mismatch

  × Kind mismatch in field 2 of Big constructor `Node` in `Tree`.
   ╭─[Main.nash:1:22]
 1 │ type Tree = Node Int List
   ·                      ────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
