crates/nash-report/src/snapshots/nash_report__canonicalize__branches__formation_context_2.snap
---
source: crates/nash-report/src/canonicalize.rs
description: type tree = Node List
---
nash::names::kind_mismatch

  × Kind mismatch in field 1 of little constructor `Node` in `tree`.
   ╭─[Main.nash:1:18]
 1 │ type tree = Node List
   ·                  ────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
