crates/nash-report/src/snapshots/nash_report__canonicalize__branches__formation_context_3.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "type alias State = { x : List }"
---
nash::names::kind_mismatch

  × Kind mismatch in field `x` of Big record alias `State`.
   ╭─[Main.nash:1:26]
 1 │ type alias State = { x : List }
   ·                          ────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
